# cs7980-guide-mate

./: .gitattributes  .gitignore  CLAUDE.md  README.md
.claude/skills/collect-claude-conversations/: SKILL.md
Research/: README.md  compass_artifact_wf-96c5cc40-6606-430a-8e1f-feb5a15f40ca_text_markdown.md  draft-v1.md
Research/conversation-analysis/: 2026-06-03_d29ce515.md  2026-06-12_284d799e.md  2026-06-12_dd0bc487.md  2026-06-13_67626b7d.md  2026-06-15_40f8e5f3.md  2026-06-19_69022496.md  2026-06-19_fa008639.md  2026-06-20_29aff2bd.md  2026-06-20_6fb45153.md  2026-06-20_7382bfa4.md  2026-06-20_7833e513.md  2026-06-20_agent-a0.md  2026-06-20_agent-a1.md  2026-06-20_agent-a2.md  2026-06-20_agent-a3.md  2026-06-20_agent-a4.md  2026-06-20_agent-a5.md  2026-06-20_agent-a6.md  2026-06-20_agent-a7.md  2026-06-20_agent-a8.md  2026-06-20_agent-a9.md  2026-06-20_agent-aa.md  2026-06-20_agent-ac.md  2026-06-20_agent-ad.md  2026-06-20_agent-ae.md  2026-06-20_agent-af.md  2026-06-20_cf939755.md  2026-06-20_dd2a7605.md  2026-06-22_6014c160.md  2026-06-22_610e67b0.md  INDEX.md  _analyses.json  stats.json
Research/literature/: findings.md  verification-log.md
Research/tools/: build_digests.py  build_outputs.py  evidence_gate.py
claude-conversations/: README.md  collect.config.json
claude-conversations/sessions/: 2026-06-03_d29ce515.jsonl  2026-06-12_284d799e.jsonl  2026-06-12_dd0bc487.jsonl  2026-06-13_67626b7d.jsonl  2026-06-15_40f8e5f3.jsonl  2026-06-19_fa008639.jsonl  2026-06-20_6fb45153.jsonl  2026-06-20_7382bfa4.jsonl  2026-06-20_7833e513.jsonl  2026-06-20_agent-a0.jsonl  2026-06-20_agent-a1.jsonl  2026-06-20_agent-a2.jsonl  2026-06-20_agent-a3.jsonl  2026-06-20_agent-a4.jsonl  2026-06-20_agent-a5.jsonl  2026-06-20_agent-a6.jsonl  2026-06-20_agent-a7.jsonl  2026-06-20_agent-a8.jsonl  2026-06-20_agent-a9.jsonl  2026-06-20_agent-aa.jsonl  2026-06-20_agent-ac.jsonl  2026-06-20_agent-ad.jsonl  2026-06-20_agent-ae.jsonl  2026-06-20_agent-af.jsonl  2026-06-20_cf939755.jsonl  2026-06-20_dd2a7605.jsonl  2026-06-22_6014c160.jsonl  2026-06-22_610e67b0.jsonl
docs/: README.md  camera.md  power.md
docs/aws-iot/: README.md  iot-core-overview.md  secure-tunneling.md  service-integration.md
docs/camera/: README.md  oak-d-camera-test.md
docs/mapping/: README.md  bringup-no-motion.md  depth-perception.md  rviz-visualization.md
docs/network/: README.md  nuwave-connection.md  nuwave-setup.md  ros2-over-nuwave.md
docs/power/: README.md  power-saving.md
rviz/: launch_rviz.sh  turtlebot468_mapping.rviz
scripts/: README.md  collect_claude_conversations.py  install_oak_fixes.sh  oak-watchdog.service  oak_bringup.sh  oak_watchdog.sh  test_collect_claude_conversations.py
scripts/git-hooks/: pre-commit
src/guide_mate_explorer/: package.xml  setup.cfg  setup.py
src/guide_mate_perception/: CMakeLists.txt  README.md  package.xml
src/guide_mate_perception/launch/: depth_lidar_fusion_cpp.launch.py  guide_mate_container.launch.py
src/guide_mate_perception/src/: bfs_explorer_node.cpp  container_node.cpp  depth_lidar_fusion_node.cpp  glass_guard_node.cpp
(+49 files in other folders)
